--- a/index.html
+++ b/index.html
@@ -15,13 +15,13 @@
     <!--Nav bar-->
     <a class="active" href="login">Login</a>
     <span>/</span>
-    <a href="Register">Register</a>
-    <a href="Help">Help</a>
-    <a href="About">About Us</a>
-    <a href="ViewAll">View all</a>
-    <a href="BorrowBook">Borrow Book</a>
-    <a href="AddBook">Add Book</a>
-    
+    <a href="Register.html" target="_blank">Register</a>
+    <a href="Help.html" target="_blank">Help</a>
+    <a href="About.html" target="_blank">About Us</a>
+    <a href="ViewAll.html" target="_blank">View all</a>
+    <a href="BorrowBook.html" target="_blank">Borrow Book</a>
+    <a href="AddBook.html" target="_blank">Add Book</a>
+
     <!--Search bar-->
     <form action="search" method="GET">
         <input type="text" name="search" placeholder="Search">
