--- a/BorrowBook.html
+++ b/BorrowBook.html
@@ -5,30 +5,139 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="icon" type="image/png" href="pics/web_icon.png">
-    <title>EgyBooks</title>
+    <title>
+        EgyBooks | Borrow Books
+    </title>
 </head>
 
 <body>
 
-    <!--Nav bar-->
-    <a class="active" href="login">Login</a>
-    <span>/</span>
-    <a href="Register.html" target="_blank">Register</a>
-    <a href="Help.html" target="_blank">Help</a>
-    <a href="About.html" target="_blank">About Us</a>
-    <a href="ViewAll.html" target="_blank">View all</a>
-    <a href="BorrowBook.html" target="_blank">Borrow Book</a>
-    <a href="AddBook.html" target="_blank">Add Book</a>
+    <header>
+        <h4>Borrow Books Form</h4>
+    </header>
 
-    <!--Search bar-->
-    <form action="search" method="GET">
-        <input type="text" name="search" placeholder="Search">
-        <select name="filter">
-            <option value="title">Title</option>
-            <option value="author">Author</option>
-            <option value="category">Category</option>
-        </select>
-        <button type="submit">Search</button>
+    <form action=" " method="get">
+
+        <h5>Book Details</h5>
+
+        <div>
+            <label for="bk_id">Book ID</label>
+            <br>
+            <input id="bk_id" type="number" name="bk_id" placeholder="Book ID" min="1" max="10" step="1" required>
+        </div>
+
+        <br>
+
+        <div>
+            <label for="bk_tit">Book Title</label>
+            <select id="bk_tit" name="bk_tit" required>
+                  <optgroup label="Islamic Books">
+                    <option value="1">صحيح البخاري</option>
+                    <option value="2">رياض الصالحين</option>
+                    <option value="3">التفسير الميسر</option>
+                  </optgroup>
+
+                  <optgroup label="Programming Books">
+                    <option value="4">Problem Solving with C++</option>
+                    <option value="5">introduction_to_Algorithms_3rd</option>
+                    <option value="6">Data Structures and Algorithm Analysis in C++</option>
+                    <option value="7">Fundamentals of Database Systems 6th Edition - Ramez Elmasry</option>
+                    <option value="8">Head_First_Object-Oriented_Analysis_Design</option>
+                  </optgroup>
+
+                  <optgroup label="Cyber Security Books">
+                    <option value="9">Linux_Basics_for_Hackers_Getting_Started_with_Networking,_Scripting</option>
+                    <option value="10">Getting_Started_Becoming_a_Master_Hacker_Hacking_is_the_Most_Important</option>
+                    <option value="11">Penetration Testing A Hands-On Introduction to Hacking</option>
+                    <option value="12">The Complete Cyber Security Course, Volume 1 Hackers Exposed</option>
+                  </optgroup>
+                </select>
+        </div>
+
+        <br>
+
+        <div>
+            <label for="author">Author</label>
+            <br>
+            <input id="author" type="text" name="author" placeholder="Author" required>
+        </div>
+
+        <br>
+
+        <div>
+            <label for="quan">Quantity</label>
+            <br>
+            <input id="quan" type="number" name="quan" required min="1" max="3" step="1" value="1">
+        </div>
+
+        <br>
+
+        <label for=" ">Check Availability</label>
+        <input type="button" name="Check Availability" required>
+
+        <hr>
+
+        <h5>Personal Details</h5>
+
+        <div>
+            <label for="f_name">First Name</label>
+            <br>
+            <input id="f_name" type="text " required placeholder="Enter your first name " name="f_name">
+        </div>
+
+        <br>
+
+        <div>
+            <label for="m_name">Middle Name</label>
+            <br>
+            <input id="m_name " type="text " required placeholder="Enter your middle name" name="m_name">
+        </div>
+
+        <br>
+
+        <div>
+            <label for="l_name">Last Name</label>
+            <br>
+            <input id="l_name " type="text " required placeholder="Enter your last name" name="l_name">
+        </div>
+
+        <br>
+
+        <div>
+            <label for="mail">Email</label>
+            <br>
+            <input id="mail" type="email" required placeholder="Enter your email" name="mail">
+        </div>
+
+        <br>
+
+        <div>
+            <label for="ph_no">Phone Number</label>
+            <br>
+            <input id="ph_no" type="text " required placeholder="Enter your phone number" name="ph_no">
+        </div>
+
+        <br>
+
+        <div>
+            <label for="add">Delivery Address</label>
+            <br>
+            <input id="add" type="text" required placeholder="Enter delivery address" name="add">
+        </div>
+
+        <br>
+
+        <div>
+            <label for="delivered_date">Delivery Date</label>
+            <br>
+            <input id="delivered_date" type="date" required name="delivered_date">
+        </div>
+
+        <br>
+
+        <input type="submit" name="Submit">
+        <input type="reset" name="Reset">
+
     </form>
 
 </body>
