--- a/BorrowBook.html
+++ b/BorrowBook.html
@@ -120,7 +120,7 @@
         <div>
             <label for="add">Delivery Address</label>
             <br>
-            <input id="add" type="text" required placeholder="Enter delivery address" name="add">
+            <input id="add" type="text" required placeholder="Enter delivery address" name="add" maxlength="30">
         </div>
 
         <br>
