Update Borrow Book

--- a/BorrowBook.html
+++ b/BorrowBook.html
@@ -16,6 +16,10 @@
 
     <form action=" " method="get">
 
+
+        <!----------------------------- Book Details------------------------------------->
+        <!-- ------------------------------------------------------------------------------ -->
+
         <h5>Book Details</h5>
 
         <div>
@@ -72,6 +76,10 @@
 
         <label for=" ">Check Availability</label>
         <input type="button" name="Check Availability" required>
+
+
+        <!----------------------------- Personal Details------------------------------------->
+        <!-- ------------------------------------------------------------------------------ -->
 
         <hr>
 
