--- a/index.html
+++ b/index.html
@@ -11,14 +11,14 @@
 <body>
 
     <!--Nav bar-->
-    <a class="active" href="login">Login</a>
+    <a class="active" href="login" target="_blank">Login</a>
     <span>/</span>
     <a href="Register.html" target="_blank">Register</a>
-    <a href="Help.html" target="_blank">Help</a>
-    <a href="About.html" target="_blank">About Us</a>
-    <a href="ViewAll.html" target="_blank">View all</a>
-    <a href="BorrowBook.html" target="_blank">Borrow Book</a>
-    <a href="AddBook.html" target="_blank">Add Book</a>
+    <a href="Help.html">Help</a>
+    <a href="About.html">About Us</a>
+    <a href="ViewAll.html">View all</a>
+    <a href="BorrowBook.html">Borrow Book</a>
+    <a href="AddBook.html">Add Book</a>
 
     <!--Search bar-->
     <form action="search" method="GET">
