--- a/About.html
+++ b/About.html
@@ -15,7 +15,7 @@
     <ol>
         <li>Yousef Mostafa</li>
         <li>Ahmed elSayed</li>
-        <li>Omar abd</li>
+        <li>Omar abdelmonem</li>
         <li>Ahmed nasser</li>
         <li>Yassin ramadan</li>
     </ol>
