--- a/About.html
+++ b/About.html
@@ -9,15 +9,37 @@
 </head>
 
 <body>
+    
+    <!--Nav bar-->
+    <a class="active" href="login" target="_blank">Login</a>
+    <span>/</span>
+    <a href="Register.html" target="_blank">Register</a>
+    <a href="index.html">Home</a>
+    <a href="About.html">About Us</a>
+    <a href="ViewAll.html">View all</a>
+    <a href="BorrowBook.html">Borrow Book</a>
+    <a href="AddBook.html">Add Book</a>
+
+    <!--Search bar-->
+    <form action="search" method="GET">
+        <input type="text" name="search" placeholder="Search">
+        <select name="filter">
+            <option value="title">Title</option>
+            <option value="author">Author</option>
+            <option value="category">Category</option>
+        </select>
+        <button type="submit">Search</button>
+    </form>
+
     <h1>About Us</h1>
     <h2>Team members:</h2>
     <h3>Names:</h3>
     <ol>
         <li>Yousef Mostafa</li>
         <li>Ahmed elSayed</li>
-        <li>Omar abd</li>
-        <li>Ahmed nasser</li>
-        <li>Yassin ramadan</li>
+        <li>Omar Abdelmonem</li>
+        <li>Ahmed Nasser</li>
+        <li>Yassin Ramadan</li>
     </ol>
 
     <h3>IDs:</h3>
