--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
     <a class="active" href="login" target="_blank">Login</a>
     <span>/</span>
     <a href="Register.html" target="_blank">Register</a>
-    <a href="Help.html">Help</a>
+    <a href="index.html">Home</a>
     <a href="About.html">About Us</a>
     <a href="ViewAll.html">View all</a>
     <a href="BorrowBook.html">Borrow Book</a>
@@ -30,6 +30,12 @@
         </select>
         <button type="submit">Search</button>
     </form>
+
+    <h1>Welcome to EgyBooks!</h1>
+    <p>
+        EgyBooks is an online library website that helps people search for books
+        and borrow them
+     </p>
 
 </body>
 
