--- a/BorrowBook.html
+++ b/BorrowBook.html
@@ -9,6 +9,26 @@
 </head>
 
 <body>
+    <!--Nav bar-->
+    <a class="active" href="login" target="_blank">Login</a>
+    <span>/</span>
+    <a href="Register.html" target="_blank">Register</a>
+    <a href="index.html">Home</a>
+    <a href="About.html">About Us</a>
+    <a href="ViewAll.html">View all</a>
+    <a href="BorrowBook.html">Borrow Book</a>
+    <a href="AddBook.html">Add Book</a>
+
+    <!--Search bar-->
+    <form action="search" method="GET">
+        <input type="text" name="search" placeholder="Search">
+        <select name="filter">
+            <option value="title">Title</option>
+            <option value="author">Author</option>
+            <option value="category">Category</option>
+        </select>
+        <button type="submit">Search</button>
+    </form>
 
     <header>
         <h4>Borrow Books Form</h4>
