--- a/addbook.html
+++ b/addbook.html
@@ -1,37 +1,61 @@
 <!DOCTYPE html>
 <html>
-    <head>
-        <meta charset="UTF-8"/>
-        <meta name ="Discription" content="This Is Description For My First Page"/>
-        <style></style>
-        <script></script>
-        <title>My First Page</title>
-    </head>
-    <body>
 
-        <form method="GET">
+<head>
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="icon" type="image/png" href="pics/web_icon.png">
+    <title>EgyBooks | Add book</title>
+</head>
 
-            <label for = "file_input">choose photo for the book</label><br><br>
-            <input type = "file"  id ="file_input" accept="image/*"><br><br>
+<body>
+    <!--Nav bar-->
+    <a class="active" href="login" target="_blank">Login</a>
+    <span>/</span>
+    <a href="Register.html" target="_blank">Register</a>
+    <a href="index.html">Home</a>
+    <a href="About.html">About Us</a>
+    <a href="ViewAll.html">View all</a>
+    <a href="BorrowBook.html">Borrow Book</a>
+    <a href="AddBook.html">Add Book</a>
 
-            <label for ="nameofthebook">name of the book</label><br><br>
-            <input type="text" id = "nameofthebook"><br><br>
+    <!--Search bar-->
+    <form action="search" method="GET">
+        <input type="text" name="search" placeholder="Search">
+        <select name="filter">
+            <option value="title">Title</option>
+            <option value="author">Author</option>
+            <option value="category">Category</option>
+        </select>
+        <button type="submit">Search</button>
+    </form>
 
-            <label for ="author">author</label><br><br>
-            <input type="text" id = "author"><br><br>
+    <hr></hr>
 
-            <label for ="numberofpages">number of pages</label><br><br>
-            <input type="number" id = "numberofpages" min = "0" max = "100000"><br><br>
+    <form method="GET">
 
-            <label for = "discription">Discription</label><br><br>
-            <textarea id ="discription" placeholder="Write a description..." rows ="20" cols="50"></textarea><br><br>
+        <label for="file_input">choose photo for the book</label><br><br>
+        <input type="file" id="file_input" accept="image/*"><br><br>
 
-            <label for = "price">Price</label><br><br>
-            <input type = "number"id="price" min="0" max="10000" required><br><br>
+        <label for="nameofthebook">name of the book</label><br><br>
+        <input type="text" id="nameofthebook"><br><br>
 
-            <input type = "submit" value="Add Book" style = "font-size:25px;border-radius: 5px;" >
+        <label for="author">author</label><br><br>
+        <input type="text" id="author"><br><br>
+
+        <label for="numberofpages">number of pages</label><br><br>
+        <input type="number" id="numberofpages" min="0" max="100000"><br><br>
+
+        <label for="discription">Discription</label><br><br>
+        <textarea id="discription" placeholder="Write a description..." rows="20" cols="50"></textarea><br><br>
+
+        <label for="price">Price</label><br><br>
+        <input type="number" id="price" min="0" max="10000" required><br><br>
+
+        <input type="submit" value="Add Book" style="font-size:25px;border-radius: 5px;">
 
 
-        </form>
-    </body>
+    </form>
+</body>
+
 </html>
