--- a/Signup.html
+++ b/Signup.html
@@ -3,6 +3,7 @@
     <head>
         <meta charset="UTF-8">
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
+        <link rel="icon" type="image/png" href="pics/web_icon.png">
         <title>EgyBooks</title>
     </head>
     <body>
