added the edit book page

--- a/BookPage.html
+++ b/BookPage.html
@@ -59,7 +59,7 @@
         received the Anne Flexner Award for Fiction and the Reynolds Price Award for Scriptwriting.
     </p>
     <button><a href="BorrowBook.html" target="_blanc">Borrow</a></button>
-    <button><a href="BorrowBook.html" target="_blanc">Edit</a></button>
+    <button><a href="EditBook.html" target="_blanc">Edit</a></button>
     <input type="button" onclick="alert('Are you sure you want to delete this book?')" value="Delete">
     <h3>Share your Opinion</h3>
     <textarea placeholder="Put you Comment here!"></textarea>
