--- a/addbook.html
+++ b/addbook.html
@@ -46,8 +46,8 @@
         <label for="numberofpages">number of pages</label><br><br>
         <input type="number" id="numberofpages" min="0" max="100000"><br><br>
 
-        <label for="discription">Discription</label><br><br>
-        <textarea id="discription" placeholder="Write a description..." rows="20" cols="50"></textarea><br><br>
+        <label for="description">description</label><br><br>
+        <textarea id="description" placeholder="Write a description..." rows="20" cols="50"></textarea><br><br>
 
         <label for="price">Price</label><br><br>
         <input type="number" id="price" min="0" max="10000" required><br><br>
