--- a/About.html
+++ b/About.html
@@ -11,7 +11,7 @@
 <body>
     
     <!--Nav bar-->
-    <a class="active" href="login" target="_blank">Login</a>
+    <a class="active" href="Login.html" target="_blank">Login</a>
     <span>/</span>
     <a href="Register.html" target="_blank">Register</a>
     <a href="index.html">Home</a>
