--- a/Login.html
+++ b/Login.html
@@ -42,7 +42,7 @@
             <br>
 
             <div>
-                <input type="submit" value="Sign Up">
+                <input type="submit" value="Login">
             </div>
         </form>
     </body>
