--- a/BorrowBook.html
+++ b/BorrowBook.html
@@ -15,7 +15,7 @@
     <a href="Register.html" target="_blank">Register</a>
     <a href="index.html">Home</a>
     <a href="About.html">About Us</a>
-    <a href="ViewAll.html">View all</a>
+    <a href="ViewBooks.html">View all</a>
     <a href="BorrowBook.html">Borrow Book</a>
     <a href="AddBook.html">Add Book</a>
 
