--- a/BookPage.html
+++ b/BookPage.html
@@ -16,7 +16,7 @@
     <a href="Register.html" target="_blank">Register</a>
     <a href="Help.html" target="_blank">Help</a>
     <a href="About.html" target="_blank">About Us</a>
-    <a href="ViewAll.html" target="_blank">View all</a>
+    <a href="ViewBooks.html" target="_blank">View all</a>
     <a href="BorrowBook.html" target="_blank">Borrow Book</a>
     <a href="AddBook.html" target="_blank">Add Book</a>
 
