--- a/About.html
+++ b/About.html
@@ -13,7 +13,7 @@
     <!--Nav bar-->
     <a class="active" href="Login.html" target="_blank">Login</a>
     <span>/</span>
-    <a href="Register.html" target="_blank">Register</a>
+    <a href="Signup.html" target="_blank">Sign Up</a>
     <a href="index.html">Home</a>
     <a href="About.html">About Us</a>
     <a href="ViewAll.html">View all</a>
