--- a/addbook.html
+++ b/addbook.html
@@ -10,9 +10,9 @@
 
 <body>
     <!--Nav bar-->
-    <a class="active" href="login" target="_blank">Login</a>
+    <a class="active" href="Login.html" target="_blank">Login</a>
     <span>/</span>
-    <a href="Register.html" target="_blank">Register</a>
+    <a href="Signup.html" target="_blank">Sign Up</a>
     <a href="index.html">Home</a>
     <a href="About.html">About Us</a>
     <a href="ViewAll.html">View all</a>
