fixed an "honest" mistake by Yassin :)

--- a/BookPage.html
+++ b/BookPage.html
@@ -34,29 +34,28 @@
     <hr></hr>
 
     <img align="left" alt="The book preface" width="400" height="600"
-    src="https://img1.od-cdn.com/ImageType-100/3651-1/%7B81B7FB41-EB95-4942-8FDB-7A47AA03D74E%7DImg100.jpg">
-    <h2>The Redshirt</h2>
+    src="pics/clean code image.jpg">
+    <h2>Clean Code</h2>
     <h5>Category :</h5>
-    <h2>Novels</h2>
+    <h2>Education</h2>
     <h5>Author :</h5>
-    <h2>Sobel, Corey</h2>
+    <h2>Robert C.Martin</h2>
     <p>
-        Finalist for the Center for Fiction's First Novel Prize
-        IPPY Gold Medal for LGBT+ Fiction
-        Selected for NPR's Books We Love
-        LitHub's Best Books of 2020 You Might Have Missed
-        Foreword Reviews Editor's Pick and Book of the Day Roundup.......................
+        Even bad code can function. But if code isn’t clean, it can bring a development 
+        organization to its knees. Every year, countless hours and significant resources 
+        are lost because of poorly written code. But it doesn’t have to be that way.
     </p>
     <h2>About the Book :</h2>
-    <h5>Edition : 7th edition</h5>
+    <h5>Edition : 1st edition</h5>
     <h5>Publisher : Pearson</h5>
-    <h5>Publishing Date : 2018</h5>
-    <h5>Number of Pages : 577 page</h5>
+    <h5>Publishing Date : 2008</h5>
+    <h5>Number of Pages : 462 page</h5>
     <h5>ISBN-code : 9988759761359</h5>
     <h2>About the author :</h2>
     <p>
-        Corey Sobel is a graduate of Duke University, where he was a scholarship football player and
-        received the Anne Flexner Award for Fiction and the Reynolds Price Award for Scriptwriting.
+        Martin has authored many books and magazine articles. 
+        He was the editor-in-chief of C++ Report magazine 
+        and served as the first chairman of the Agile Alliance.
     </p>
     <button><a href="BorrowBook.html" target="_blanc">Borrow</a></button>
     <button><a href="EditBook.html" target="_blanc">Edit</a></button>
