Omar added profile page

--- a/About.html
+++ b/About.html
@@ -19,6 +19,7 @@
     <a href="ViewBooks.html">View all</a>
     <a href="BorrowBook.html">Borrow Book</a>
     <a href="AddBook.html">Add Book</a>
+    <a href ="Profile.html">Profile</a>
 
     <!--Search bar-->
     <form action="search" method="GET">
