--- a/addbook.html
+++ b/addbook.html
@@ -18,6 +18,7 @@
     <a href="ViewBooks.html">View all</a>
     <a href="BorrowBook.html">Borrow Book</a>
     <a href="AddBook.html">Add Book</a>
+    <a href ="Profile.html">Profile</a>
 
     <!--Search bar-->
     <form action="search" method="GET">
@@ -53,6 +54,7 @@
         <input type="number" id="price" min="0" max="10000" required><br><br>
 
         <input type="submit" value="Add Book" style="font-size:25px;border-radius: 5px;">
+
 
     </form>
 </body>
