--- a/BookPage.html
+++ b/BookPage.html
@@ -16,9 +16,10 @@
     <a href="Signup.html" target="_blank">Sign Up</a>
     <a href="index.html">Home</a>
     <a href="About.html">About Us</a>
-    <a href="ViewAll.html">View all</a>
+    <a href="ViewBooks.html">View all</a>
     <a href="BorrowBook.html">Borrow Book</a>
     <a href="AddBook.html">Add Book</a>
+    <a href ="Profile.html">Profile</a>
 
     <!--Search bar-->
     <form action="search" method="GET">
