--- a/Login.html
+++ b/Login.html
@@ -17,6 +17,7 @@
     <a href="ViewBooks.html">View all</a>
     <a href="BorrowBook.html">Borrow Book</a>
     <a href="AddBook.html">Add Book</a>
+    <a href ="Profile.html">Profile</a>
     
         <h1>Login</h1>
         
