--- a/Profile.html
+++ b/Profile.html
@@ -7,6 +7,28 @@
         <link rel="icon" type="image/png" href="pics/web_icon.png">
     </head>
     <body>
+      
+    <!--Nav bar-->
+    <a class="active" href="Login.html" target="_blank">Login</a>
+    <span>/</span>
+    <a href="Signup.html" target="_blank">Sign Up</a>
+    <a href="index.html">Home</a>
+    <a href="About.html">About Us</a>
+    <a href="ViewBooks.html">View all</a>
+    <a href="BorrowBook.html">Borrow Book</a>
+    <a href="AddBook.html">Add Book</a>
+    <a href ="Profile.html">Profile</a>
+
+    <!--Search bar-->
+    <form action="search" method="GET">
+        <input type="text" name="search" placeholder="Search">
+        <select name="filter">
+            <option value="title">Title</option>
+            <option value="author">Author</option>
+            <option value="category">Category</option>
+        </select>
+        <button type="submit">Search</button>
+    </form>
         <h1>Profile</h1>
         <div>
             <p>Name: Book lover</p>
