--- a/Signup.html
+++ b/Signup.html
@@ -8,16 +8,16 @@
     </head>
     <body>
         
-        <!--Nav bar-->
-        <a class="active" href="Login.html" target="_blank">Login</a>
-        <span>/</span>
-        <a href="Signup.html" target="_blank">Sign Up</a>
-        <a href="index.html">Home</a>
-        <a href="About.html">About Us</a>
-        <a href="ViewBooks.html">View all</a>
-        <a href="BorrowBook.html">Borrow Book</a>
-        <a href="AddBook.html">Add Book</a>
-        <h1>Sign Up</h1>
+    <!--Nav bar-->
+    <a class="active" href="Login.html" target="_blank">Login</a>
+    <span>/</span>
+    <a href="Signup.html" target="_blank">Sign Up</a>
+    <a href="index.html">Home</a>
+    <a href="About.html">About Us</a>
+    <a href="ViewBooks.html">View all</a>
+    <a href="BorrowBook.html">Borrow Book</a>
+    <a href="AddBook.html">Add Book</a>
+    <a href ="Profile.html">Profile</a>
 
         <form method="POST">
             <div>
