--- a/ViewBooks.html
+++ b/ViewBooks.html
@@ -10,14 +10,15 @@
 
 <body>
     <!--Nav bar-->
-    <a class="active" href="login" target="_blank">Login</a>
+    <a class="active" href="Login.html" target="_blank">Login</a>
     <span>/</span>
-    <a href="Register.html" target="_blank">Register</a>
+    <a href="Signup.html" target="_blank">Sign Up</a>
     <a href="index.html">Home</a>
     <a href="About.html">About Us</a>
     <a href="ViewBooks.html">View all</a>
     <a href="BorrowBook.html">Borrow Book</a>
     <a href="AddBook.html">Add Book</a>
+    <a href ="Profile.html">Profile</a>
 
     <!--Search bar-->
     <form action="search" method="GET">
