Add some features in Profile page

--- a/Profile.html
+++ b/Profile.html
@@ -31,14 +31,16 @@
     </form>
         <h1>Profile</h1>
         <div>
-            <p>Name: Book lover</p>
+            <p>Username: Book lover</p>
             <p>Email: admin@example.com</p>
+            <p>Password: 1234</p>
             <h3>Account Type:</h3>
             <select id="Account Type">
               <option value="Admin">Admin</option>
               <option value="User">User</option>
             </select>
         </div>
+        
         <div>
                 <h3>Borrowed Books:</h3>
                 <form action="BookPage.html" method="GET">
@@ -47,6 +49,14 @@
                   </select>
                   <input type="submit" value="View Book">
                 </form>
+        </div>
+
+        <br>
+
+        <div>
+          <a href="EditProfile.html">
+            <img src="EditProfilePic.png" width="50" height="50" title="Edit Profile" alt="Edit Profile">
+          </a>
         </div>
     </body>
 </html>
