Update Profile page

--- a/Profile.html
+++ b/Profile.html
@@ -55,7 +55,7 @@
 
         <div>
           <a href="EditProfile.html">
-            <img src="EditProfilePic.png" width="50" height="50" title="Edit Profile" alt="Edit Profile">
+            <img src="pics/EditProfilePic.png" width="50" height="50" title="Edit Profile" alt="Edit Profile">
           </a>
         </div>
     </body>
