--- a/About.html
+++ b/About.html
@@ -11,9 +11,9 @@
 <body>
     
     <!--Nav bar-->
-    <a class="active" href="Login.html" target="_blank">Login</a>
+    <a class="active" href="Login.html" target="_self">Login</a>
     <span>/</span>
-    <a href="Signup.html" target="_blank">Sign Up</a>
+    <a href="Signup.html" target="_self">Sign Up</a>
     <a href="index.html">Home</a>
     <a href="About.html">About Us</a>
     <a href="ViewBooks.html">View all</a>
@@ -39,7 +39,7 @@
     <h3>Names:</h3>
     <ol>
         <li>Yousef Mostafa</li>
-        <li>Ahmed elSayed</li>
+        <li>Ahmed elsayed</li>
         <li>Omar Abdelmonem</li>
         <li>Ahmed Nasser</li>
         <li>Yassin Ramadan</li>
