--- a/BorrowBook.html
+++ b/BorrowBook.html
@@ -10,9 +10,9 @@
 
 <body>
     <!--Nav bar-->
-    <a class="active" href="Login.html" target="_self">Login</a>
+    <a class="active" href="Login.html">Login</a>
     <span>/</span>
-    <a href="Signup.html" target="_self">Sign Up</a>
+    <a href="Signup.html">Sign Up</a>
     <a href="index.html">Home</a>
     <a href="About.html">About Us</a>
     <a href="ViewBooks.html">View all</a>
