Added Sign Up heading

--- a/Signup.html
+++ b/Signup.html
@@ -18,7 +18,9 @@
     <a href="BorrowBook.html">Borrow Book</a>
     <a href="AddBook.html">Add Book</a>
     <a href ="Profile.html">Profile</a>
-
+        
+        <h1>Sign Up</h1>
+        
         <form method="POST">
             <div>
                 <label for="username">Username:</label>
