--- a/About.html
+++ b/About.html
@@ -6,6 +6,11 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="icon" type="image/png" href="pics/web_icon.png">
     <title>EgyBooks</title>
+    <style>
+        * {
+            font-family: "Indie Flower", cursive;
+        }
+    </style>
 </head>
 
 <body>
