--- a/index.html
+++ b/index.html
@@ -19,15 +19,14 @@
     <link href="https://fonts.googleapis.com/css2?family=Indie+Flower&family=Permanent+Marker&family=Shadows+Into+Light&display=swap" rel="stylesheet">
     <style>
         body{
+            margin: 0;
             background-position: center;
             background-repeat: no-repeat;
             background-size : cover;
+            height: 100vh;
             background-image: url(pics/library_background2.jpg);
             -webkit-backdrop-filter: blur(5px);
             backdrop-filter: blur(5px);
-            height: 100%;
-            margin: 0;
-            background-color: rgb(166, 138, 100);
         }
        
         * {
