--- a/BorrowBook.html
+++ b/BorrowBook.html
@@ -5,169 +5,142 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="icon" type="image/png" href="pics/web_icon.png">
-    <title>EgyBooks | Borrow Books</title>
+    <link href="https://fonts.googleapis.com/css2?family=Poppins:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&family=Roboto:ital,wght@0,100;0,300;0,400;0,500;0,700;0,900;1,100;1,300;1,400;1,500;1,700;1,900&display=swap" rel="stylesheet">
+    <link rel="stylesheet" href="nav_bar.css">
+    <link rel="stylesheet" href="borrow_book.css">
+    <title>EgyBooks | Borrow Book</title>
 </head>
 
 <body>
-    <!--Nav bar-->
-    <a class="active" href="Login.html">Login</a>
-    <span>/</span>
-    <a href="Signup.html">Sign Up</a>
-    <a href="index.html">Home</a>
-    <a href="About.html">About Us</a>
-    <a href="ViewBooks.html">View all</a>
-    <a href="BorrowBook.html">Borrow Book</a>
-    <a href="AddBook.html">Add Book</a>
-    <a href ="Profile.html">Profile</a>
-
-    <!--Search bar-->
-    <form action="search" method="GET">
-        <input type="text" name="search" placeholder="Search">
-        <select name="filter">
-            <option value="title">Title</option>
-            <option value="author">Author</option>
-            <option value="category">Category</option>
-        </select>
-        <button type="submit">Search</button>
-    </form>
-
-    <hr></hr>
-
-    <header>
-        <h4>Borrow Books Form</h4>
-    </header>
-
-    <form action=" " method="get">
-
-
-        <!----------------------------- Book Details------------------------------------->
-        <!-- ------------------------------------------------------------------------------ -->
-
-        <h5>Book Details</h5>
-
-        <div>
-            <label for="bk_id">Book ID</label>
-            <br>
-            <input id="bk_id" type="number" name="bk_id" placeholder="Book ID" min="1" max="12" step="1" required>
+    <div class = "nav_bar">
+        <div class="nav_bar_actions">
+            <img class = "nav_bar_icon" src="pics/web_icon.png">
+            <div class = "left_buttons">
+                <ul class="nav_bar_button"><a href="Login.html">Login</a></ul>
+                <ul class="nav_bar_button"><a href="Signup.html">Sign Up</a></ul>
+            </div>
+            <div class="center_buttons">
+                <ul class="nav_bar_button"><a href="index.html">Home</a></ul>
+                <ul class="nav_bar_button"><a href="ViewBooks.html">View all</a></ul>
+                <ul class="nav_bar_button"><a href="BorrowBook.html">Borrow Book</a></ul>
+                <ul class="nav_bar_button"><a href="AddBook.html">Add Book</a></ul>
+            </div>
+            <div class ="right_buttons">
+                <ul class="nav_bar_button"><a href="Profile.html">Profile</a></ul>
+                <ul class="nav_bar_button"><a href="About.html">About Us</a></ul>
+            </div>
         </div>
+    </div>
 
-        <br>
+    <div class="container">
+        <header>Borrow Book</header>
+        <form action="#">
+            <div class="form">
+                <div class="bookDetails">
+                    <span class="title">Book Details</span>
 
-        <div>
-            <label for="bk_tit">Book Title</label>
-            <select id="bk_tit" name="bk_tit" required>
-                  <optgroup label="Islamic Books">
-                    <option value="1">صحيح البخاري</option>
-                    <option value="2">رياض الصالحين</option>
-                    <option value="3">التفسير الميسر</option>
-                  </optgroup>
+                    <div class="fields">
+                        <div class="inputField">
+                            <label for="bk_id">Book ID</label>
+                            <input id="bk_id" type="text" placeholder="Enter Book ID" name="bk_id" required maxlength="5">
+                        </div>
 
-                  <optgroup label="Programming Books">
-                    <option value="4">Problem Solving with C++</option>
-                    <option value="5">introduction_to_Algorithms_3rd</option>
-                    <option value="6">Data Structures and Algorithm Analysis in C++</option>
-                    <option value="7">Fundamentals of Database Systems 6th Edition - Ramez Elmasry</option>
-                    <option value="8">Head_First_Object-Oriented_Analysis_Design</option>
-                  </optgroup>
+                        <div class="inputField">
+                            <label for="author">Author</label>
+                            <input id="author" type="text" name="author" placeholder="Author" required maxlength="10">
+                        </div>
 
-                  <optgroup label="Cyber Security Books">
-                    <option value="9">Linux_Basics_for_Hackers_Getting_Started_with_Networking,_Scripting</option>
-                    <option value="10">Getting_Started_Becoming_a_Master_Hacker_Hacking_is_the_Most_Important</option>
-                    <option value="11">Penetration Testing A Hands-On Introduction to Hacking</option>
-                    <option value="12">The Complete Cyber Security Course, Volume 1 Hackers Exposed</option>
-                  </optgroup>
-                </select>
-        </div>
+                        <div class="inputField">
+                            <label for="quan">Quantity</label>
+                            <input id="quan" type="number" name="quan" required min="1" max="3" step="1" value="1">
+                        </div>
 
-        <br>
+                        <div class="inputFieldli">
+                            <label for="bk_tit">Book Title</label>
+                            <select id="bk_tit" name="bk_tit" required>
+                                <optgroup label="Islamic Books">
+                                    <option value="1">صحيح البخاري</option>
+                                    <option value="2">رياض الصالحين</option>
+                                    <option value="3">التفسير الميسر</option>
+                                </optgroup>
+                    
+                                <optgroup label="Programming Books">
+                                    <option value="4">Problem Solving with C++</option>
+                                    <option value="5">introduction_to_Algorithms_3rd</option>
+                                    <option value="6">Data Structures and Algorithm Analysis in C++</option>
+                                    <option value="7">Fundamentals of Database Systems 6th Edition - Ramez Elmasry</option>
+                                    <option value="8">Head_First_Object-Oriented_Analysis_Design</option>
+                                </optgroup>
+                    
+                                <optgroup label="Cyber Security Books">
+                                    <option value="9">Linux_Basics_for_Hackers_Getting_Started_with_Networking,_Scripting</option>
+                                    <option value="10">Getting_Started_Becoming_a_Master_Hacker_Hacking_is_the_Most_Important</option>
+                                    <option value="11">Penetration Testing A Hands-On Introduction to Hacking</option>
+                                    <option value="12">The Complete Cyber Security Course, Volume 1 Hackers Exposed</option>
+                                </optgroup>
+                                </select>
+                        </div>
 
-        <div>
-            <label for="author">Author</label>
-            <br>
-            <input id="author" type="text" name="author" placeholder="Author" required maxlength="10">
-        </div>
+                        <div class="avaCheck">
+                            <button class="btn">Check Availability</button>
+                        </div>
 
-        <br>
+                    </div>
+                </div>
+                <br>
+                <div class="personlaDetails">
+                    <span class="title">Personal Details</span>
 
-        <div>
-            <label for="quan">Quantity</label>
-            <br>
-            <input id="quan" type="number" name="quan" required min="1" max="3" step="1" value="1">
-        </div>
+                    <div class="fields">
 
-        <br>
+                        <div class="inputField">
+                            <label for="f_name">First Name</label>
+                            <input id="f_name" type="text" placeholder="Enter your first name" name="f_name" required maxlength="10">
+                        </div>
 
-        <label for=" ">Check Availability</label>
-        <input type="button" name="Check Availability" required>
+                        <div class="inputField">
+                            <label for="m_name">Middle Name</label>
+                            <input id="m_name" type="text" required placeholder="Enter your middle name" name="m_name" maxlength="10">
+                        </div>
 
+                        <div class="inputField">
+                            <label for="l_name">Last Name</label>
+                            <input id="l_name" type="text" required placeholder="Enter your last name" name="l_name" maxlength="10">
+                        </div>
 
-        <!----------------------------- Personal Details------------------------------------->
-        <!-- ------------------------------------------------------------------------------ -->
+                        <div class="inputField">
+                            <label for="mail">Email</label>
+                            <input id="mail" type="email" required placeholder="Enter your email" name="mail" maxlength="25">
+                        </div>
 
-        <hr>
+                        <div class="inputField">
+                            <label for="ph_no">Phone Number</label>
+                            <input id="ph_no" type="text" required placeholder="Enter your phone number" name="ph_no" maxlength="13">
+                        </div>
 
-        <h5>Personal Details</h5>
+                        <div class="inputField">
+                            <label for="add">Delivery Addresss</label>
+                            <input id="add" type="text" required placeholder="Enter delivery address" name="add" maxlength="25">
+                        </div>
 
-        <div>
-            <label for="f_name">First Name</label>
-            <br>
-            <input id="f_name" type="text" required placeholder="Enter your first name " name="f_name" maxlength="10">
-        </div>
+                        <div class="inputField">
+                            <label for="delivered_date">Delivery Date</label>
+                            <input id="delivered_date" type="date" required name="delivered_date">
+                        </div>
 
-        <br>
+                        <div class="submit">
+                            <input type="submit" name="Submit" required>
+                        </div>
 
-        <div>
-            <label for="m_name">Middle Name</label>
-            <br>
-            <input id="m_name" type="text" required placeholder="Enter your middle name" name="m_name" maxlength="10">
-        </div>
+                        <div class="reset">
+                            <input type="reset" name="Reset">
+                        </div>
 
-        <br>
-
-        <div>
-            <label for="l_name">Last Name</label>
-            <br>
-            <input id="l_name" type="text" required placeholder="Enter your last name" name="l_name" maxlength="10">
-        </div>
-
-        <br>
-
-        <div>
-            <label for="mail">Email</label>
-            <br>
-            <input id="mail" type="email" required placeholder="Enter your email" name="mail" maxlength="25">
-        </div>
-
-        <br>
-
-        <div>
-            <label for="ph_no">Phone Number</label>
-            <br>
-            <input id="ph_no" type="text " required placeholder="Enter your phone number" name="ph_no" maxlength="13">
-        </div>
-
-        <br>
-
-        <div>
-            <label for="add">Delivery Address</label>
-            <br>
-            <input id="add" type="text" required placeholder="Enter delivery address" name="add" maxlength="30">
-        </div>
-
-        <br>
-
-        <div>
-            <label for="delivered_date">Delivery Date</label>
-            <br>
-            <input id="delivered_date" type="date" required name="delivered_date">
-        </div>
-
-        <br>
-
-        <input type="submit" name="Submit" required>
-        <input type="reset" name="Reset">
-
-    </form>
+                    </div>
+                </div>
+            </div>
+        </form>
+    </div>
 
 </body>
 
