added css for all pages and css for about us page

--- a/index.html
+++ b/index.html
@@ -4,6 +4,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="stylesheet" href="core.css">
     <link rel="icon" type="image/png" href="pics/web_icon.png">
     <link rel="stylesheet" href="nav_bar.css">
     <link rel="stylesheet" href="search_bar.css">
@@ -19,20 +20,10 @@
     <link href="https://fonts.googleapis.com/css2?family=Indie+Flower&family=Permanent+Marker&family=Shadows+Into+Light&display=swap" rel="stylesheet">
     <style>
         body{
-            margin: 0;
-            background-position: center;
-            background-repeat: no-repeat;
-            background-size : cover;
-            height: 100vh;
             background-image: url(pics/library_background2.jpg);
             -webkit-backdrop-filter: blur(5px);
             backdrop-filter: blur(5px);
         }
-       
-        * {
-            font-family: "Shadow Into Light", cursive;
-        }
-   
     </style>
     <title>EgyBooks</title>
     
