--- a/AddBook.html
+++ b/AddBook.html
@@ -5,53 +5,108 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="icon" type="image/png" href="pics/web_icon.png">
+    <link rel="stylesheet" href="nav_bar.css">
+    <link rel="stylesheet" href="search_bar.css">
+    <link rel = "stylesheet" href="introtext.css">
+    <link rel = "stylesheet" href = "add_book.css">
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Shadows+Into+Light&display=swap" rel="stylesheet">
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Permanent+Marker&family=Shadows+Into+Light&display=swap" rel="stylesheet">
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Indie+Flower&family=Permanent+Marker&family=Shadows+Into+Light&display=swap" rel="stylesheet">
+    <link rel="icon" type="image/png" href="pics/web_icon.png">
+    <style>
+        body {
+            font-family: Arial, sans-serif;
+            background-color: #f5f5f5; /* Light gray background */
+            color: #333; /* Dark gray text */
+            margin: 0;
+            padding: 0;
+        }
+    </style>
     <title>EgyBooks | Add book</title>
 </head>
 
 <body>
     <!--Nav bar-->
-    <a class="active" href="Login.html">Login</a>
-    <span>/</span>
-    <a href="Signup.html">Sign Up</a>
-    <a href="index.html">Home</a>
-    <a href="About.html">About Us</a>
-    <a href="ViewBooks.html">View all</a>
-    <a href="BorrowBook.html">Borrow Book</a>
-    <a href="AddBook.html">Add Book</a>
-    <a href ="Profile.html">Profile</a>
-
-    <!--Search bar-->
-    <form action="search" method="GET">
-        <input type="text" name="search" placeholder="Search">
-        <select name="filter">
-            <option value="title">Title</option>
-            <option value="author">Author</option>
-            <option value="category">Category</option>
-        </select>
-        <button type="submit">Search</button>
-    </form>
+    <div class = "nav_bar">
+        <!--Nav bar actions-->
+        <div class="nav_bar_actions">
+            <img class = "nav_bar_icon" src="pics/web_icon.png">
+            <div class = "left_buttons">
+                <ul class="nav_bar_button"><a href="Login.html">Login</a></ul>
+                <ul class="nav_bar_button"><a href="Signup.html">Sign Up</a></ul>
+            </div>
+            <div class="center_buttons">
+                <ul class="nav_bar_button"><a href="index.html">Home</a></ul>
+                <ul class="nav_bar_button"><a href="ViewBooks.html">View all</a></ul>
+                <ul class="nav_bar_button"><a href="BorrowBook.html">Borrow Book</a></ul>
+                <ul class="nav_bar_button"><a href="AddBook.html">Add Book</a></ul>
+            </div>
+            <div class ="right_buttons">
+                <ul class="nav_bar_button"><a href="Profile.html">Profile</a></ul>
+                <ul class="nav_bar_button"><a href="About.html">About Us</a></ul>
+            </div>
+        </div>
+    
+        <!--Search bar-->
+        <div class="search_bar">
+            <form action="search" method="GET">
+                <div class="search_input_container">
+                    <input type="text" name="search" placeholder="Search" class="input">
+                    <svg class="search_icon" fill="#000000" width="20px" height="20px" viewBox="0 0 1920 1920" xmlns="http://www.w3.org/2000/svg">
+                        <path d="M790.588 1468.235c-373.722 0-677.647-303.924-677.647-677.647 0-373.722 303.925-677.647 677.647-677.647 373.723 0 677.647 303.925 677.647 677.647 0 373.723-303.924 677.647-677.647 677.647Zm596.781-160.715c120.396-138.692 193.807-319.285 193.807-516.932C1581.176 354.748 1226.428 0 790.588 0S0 354.748 0 790.588s354.748 790.588 790.588 790.588c197.647 0 378.24-73.411 516.932-193.807l516.028 516.142 79.963-79.963-516.142-516.028Z" fill-rule="evenodd"></path>
+                    </svg>
+                    <select name="filter" class="filter">
+                        <option value="title">Title</option>
+                        <option value="author">Author</option>
+                        <option value="category">Category</option>
+                    </select>
+                </div>
+            </form>
+        </div>
+    </div>
 
     <hr></hr>
 
     <form method="GET">
 
-        <label for="file_input">choose photo for the book</label><br><br>
-        <input type="file" id="file_input" accept="image/*"><br><br>
+        <p class="title">Add Book</p>
 
-        <label for="nameofthebook">name of the book</label><br><br>
-        <input type="text" id="nameofthebook"><br><br>
+        <div class="form_group">
+            <label class = "subtitle" for="file_input">choose photo for the book</label><br><br>
+            <input type="file" id="file_input" accept="image/*"><br><br>
+        </div>
 
-        <label for="author">author</label><br><br>
-        <input type="text" id="author"><br><br>
+        <div class="form_group">
+            <label class = "subtitle" for="nameofthebook">name of the book</label><br><br>
+            <input class="form_style" type="text" id="nameofthebook"><br><br>
+        </div>
 
-        <label for="numberofpages">number of pages</label><br><br>
-        <input type="number" id="numberofpages" min="0" max="100000"><br><br>
+        <div class="form_group">
+            <label class = "subtitle" for="author">author</label><br><br>
+            <input class="form_style" type="text" id="author"><br><br>
+        </div>
 
-        <label for="description">description</label><br><br>
-        <textarea id="description" placeholder="Write a description..." rows="20" cols="50"></textarea><br><br>
+        <div class="form_group">
+            <label class = "subtitle" for="numberofpages">number of pages</label><br><br>
+            <input class="form_style" type="number" id="numberofpages" min="0" max="100000"><br><br>
+        </div>
 
-        <label for="price">Price</label><br><br>
-        <input type="number" id="price" min="0" max="10000" required><br><br>
+        <div class="form_group">
+            <label class = "subtitle" for="description">description</label><br><br>
+            <textarea class="form_style" id="description" placeholder="Write a description..." rows="20" cols="50"></textarea><br><br>
+
+        </div>
+        <div class="form_group">
+            <label class = "subtitle" for="price">Price</label><br><br>
+            <input class="form_style" type="number" id="price" min="0" max="10000" required><br><br>
+        </div>
+
 
         <input type="submit" value="Add Book" style="font-size:25px;border-radius: 5px;">
 
