added all css files into a single folder

--- a/About.html
+++ b/About.html
@@ -5,10 +5,11 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="icon" type="image/png" href="pics/web_icon.png">
-    <link rel="stylesheet" href="core.css">
-    <link rel="stylesheet" href="About.css">
-    <link rel="stylesheet" href="nav_bar.css">
-    <link rel="stylesheet" href="search_bar.css">
+    <link rel="stylesheet" href="css/core.css">
+    <link rel="stylesheet" href="css/About.css">
+    <link rel="stylesheet" href="css/nav_bar.css">
+    <link rel="stylesheet" href="css/search_bar.css">
+
     <title>EgyBooks</title>
     <style>
 
