--- a/AddBook.html
+++ b/AddBook.html
@@ -5,10 +5,10 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="icon" type="image/png" href="pics/web_icon.png">
-    <link rel="stylesheet" href="nav_bar.css">
-    <link rel="stylesheet" href="search_bar.css">
-    <link rel = "stylesheet" href="introtext.css">
-    <link rel = "stylesheet" href = "add_book.css">
+    <link rel="stylesheet" href="css/nav_bar.css">
+    <link rel="stylesheet" href="css/search_bar.css">
+    <link rel = "stylesheet" href="css/introtext.css">
+    <link rel = "stylesheet" href = "css/add_book.css">
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Shadows+Into+Light&display=swap" rel="stylesheet">
