--- a/BorrowBook.html
+++ b/BorrowBook.html
@@ -1,4 +1,4 @@
-<!DOCTYPE html>
+css/<!DOCTYPE html>
 <html>
 
 <head>
@@ -6,8 +6,8 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="icon" type="image/png" href="pics/web_icon.png">
     <link href="https://fonts.googleapis.com/css2?family=Poppins:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&family=Roboto:ital,wght@0,100;0,300;0,400;0,500;0,700;0,900;1,100;1,300;1,400;1,500;1,700;1,900&display=swap" rel="stylesheet">
-    <link rel="stylesheet" href="nav_bar.css">
-    <link rel="stylesheet" href="borrow_book.css">
+    <link rel="stylesheet" href="css/nav_bar.css">
+    <link rel="stylesheet" href="css/borrow_book.css">
     <title>EgyBooks | Borrow Book</title>
 </head>
 
