--- a/Signup.html
+++ b/Signup.html
@@ -4,8 +4,9 @@
         <meta charset="UTF-8">
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
         <link rel="icon" type="image/png" href="pics/web_icon.png">
-        <link rel="stylesheet" href="nav_bar.css">
-        <link rel="stylesheet" href="Signup_styles.css">
+        <link rel="stylesheet" href="css/core.css">
+        <link rel="stylesheet" href="css/nav_bar.css">
+        <link rel="stylesheet" href="css/Signup_styles.css">
         <link rel="preconnect" href="https://fonts.googleapis.com">
         <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
         <link href="https://fonts.googleapis.com/css2?family=Shadows+Into+Light&display=swap" rel="stylesheet">
