--- a/index.html
+++ b/index.html
@@ -4,11 +4,11 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="core.css">
     <link rel="icon" type="image/png" href="pics/web_icon.png">
-    <link rel="stylesheet" href="nav_bar.css">
-    <link rel="stylesheet" href="search_bar.css">
-    <link rel = "stylesheet" href="introtext.css">
+    <link rel="stylesheet" href="css/core.css">
+    <link rel="stylesheet" href="css/nav_bar.css">
+    <link rel="stylesheet" href="css/search_bar.css">
+    <link rel="stylesheet" href="css/introtext.css">
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Shadows+Into+Light&display=swap" rel="stylesheet">
@@ -77,7 +77,7 @@
     </div>
     <div class="para_text">
         <p>
-            EgyBooks is an online library website that helps people search for books
+            EgyBooks is an nline library website that helps people search for books
             and borrow them
          </p>
     </div>
