--- a/AddBook.html
+++ b/AddBook.html
@@ -5,6 +5,7 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="icon" type="image/png" href="pics/web_icon.png">
+    <link rel="stylesheet" href="css/core.css">
     <link rel="stylesheet" href="css/nav_bar.css">
     <link rel="stylesheet" href="css/search_bar.css">
     <link rel = "stylesheet" href="css/introtext.css">
@@ -70,8 +71,6 @@
             </form>
         </div>
     </div>
-
-    <hr></hr>
 
     <form method="GET">
 
