--- a/BorrowBook.html
+++ b/BorrowBook.html
@@ -1,4 +1,4 @@
-css/<!DOCTYPE html>
+<!DOCTYPE html>
 <html>
 
 <head>
@@ -6,13 +6,17 @@ css/<!DOCTYPE html>
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="icon" type="image/png" href="pics/web_icon.png">
     <link href="https://fonts.googleapis.com/css2?family=Poppins:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&family=Roboto:ital,wght@0,100;0,300;0,400;0,500;0,700;0,900;1,100;1,300;1,400;1,500;1,700;1,900&display=swap" rel="stylesheet">
+    <link rel="stylesheet" href="css/core.css">
     <link rel="stylesheet" href="css/nav_bar.css">
+    <link rel="stylesheet" href="css/search_bar.css">
     <link rel="stylesheet" href="css/borrow_book.css">
     <title>EgyBooks | Borrow Book</title>
 </head>
 
 <body>
-    <div class = "nav_bar">
+     <!--Nav bar-->
+     <div class = "nav_bar">
+        <!--Nav bar actions-->
         <div class="nav_bar_actions">
             <img class = "nav_bar_icon" src="pics/web_icon.png">
             <div class = "left_buttons">
@@ -29,6 +33,23 @@ css/<!DOCTYPE html>
                 <ul class="nav_bar_button"><a href="Profile.html">Profile</a></ul>
                 <ul class="nav_bar_button"><a href="About.html">About Us</a></ul>
             </div>
+        </div>
+    
+        <!--Search bar-->
+        <div class="search_bar">
+            <form action="search" method="GET">
+                <div class="search_input_container">
+                    <input type="text" name="search" placeholder="Search" class="input">
+                    <svg class="search_icon" fill="#000000" width="20px" height="20px" viewBox="0 0 1920 1920" xmlns="http://www.w3.org/2000/svg">
+                        <path d="M790.588 1468.235c-373.722 0-677.647-303.924-677.647-677.647 0-373.722 303.925-677.647 677.647-677.647 373.723 0 677.647 303.925 677.647 677.647 0 373.723-303.924 677.647-677.647 677.647Zm596.781-160.715c120.396-138.692 193.807-319.285 193.807-516.932C1581.176 354.748 1226.428 0 790.588 0S0 354.748 0 790.588s354.748 790.588 790.588 790.588c197.647 0 378.24-73.411 516.932-193.807l516.028 516.142 79.963-79.963-516.142-516.028Z" fill-rule="evenodd"></path>
+                    </svg>
+                    <select name="filter" class="filter">
+                        <option value="title">Title</option>
+                        <option value="author">Author</option>
+                        <option value="category">Category</option>
+                    </select>
+                </div>
+            </form>
         </div>
     </div>
 
