added javascript for login and register

--- a/AddBook.html
+++ b/AddBook.html
@@ -72,7 +72,7 @@
         </div>
     </div>
 
-    <form method="GET">
+    <form class="add_book_class" method="GET">
 
         <p class="title">Add Book</p>
 
@@ -110,7 +110,7 @@
         <input type="submit" value="Add Book" style="font-size:25px;border-radius: 5px;">
 
 
-    </form>
+    </z>
 </body>
 
 </html>
