--- a/Login.html
+++ b/Login.html
@@ -3,6 +3,7 @@
     <head>
         <meta charset="UTF-8">
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
+        <script src="javascript/Login.js"></script>
         <link rel="icon" type="image/png" href="pics/web_icon.png">
         <link rel="stylesheet" href="css/core.css">
         <link rel="stylesheet" href="css/nav_bar.css">
@@ -46,14 +47,14 @@
                 <div >
                     <div>
                         <label for="username">Username</label>
-                        <input type="text" required id="username" name="username" placeholder="Enter your username">
+                        <input id="login_username" type="text" required id="username" name="username" placeholder="Enter your username">
                     </div>
 
                     <br>
 
                     <div>
                         <label for="password">Password</label>
-                        <input type="password" required id="password" name="password" placeholder="Enter your password">
+                        <input id="login_password" type="password" required id="password" name="password" placeholder="Enter your password">
                     </div>
 
                     <br>
