Edit Profile CSS

--- a/BorrowBook.html
+++ b/BorrowBook.html
@@ -15,8 +15,8 @@
 </head>
 
 <body>
-     <!--Nav bar-->
-     <div class = "nav_bar">
+    <!--Nav bar-->
+    <div class = "nav_bar">
         <!--Nav bar actions-->
         <div class="nav_bar_actions">
             <img class = "nav_bar_icon" src="pics/web_icon.png">
@@ -35,6 +35,7 @@
                 <ul id="aboutus_button" class="nav_bar_button"><a href="About.html">About Us</a></ul>
             </div>
         </div>
+    </div>
 
     <div class="container">
         <header>Borrow Book</header>
