--- a/EditProfile.html
+++ b/EditProfile.html
@@ -3,70 +3,80 @@
     <head>
         <meta charset="UTF-8">
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
-        <title>EgyBooks</title>
+        <script src="javascript/navBar.js"></script>
         <link rel="icon" type="image/png" href="pics/web_icon.png">
+        <link href="https://fonts.googleapis.com/css2?family=Poppins:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&family=Roboto:ital,wght@0,100;0,300;0,400;0,500;0,700;0,900;1,100;1,300;1,400;1,500;1,700;1,900&display=swap" rel="stylesheet">
+        <link rel="stylesheet" href="css/core.css">
+        <link rel="stylesheet" href="css/nav_bar.css">
+        <link rel="stylesheet" href="css/edit_profile.css">
     </head>
+
+
     <body>
-        <!--Nav bar-->
-        <a class="active" href="Login.html">Login</a>
-        <span>/</span>
-        <a href="Signup.html">Sign Up</a>
-        <a href="index.html">Home</a>
-        <a href="About.html">About Us</a>
-        <a href="ViewBooks.html">View all</a>
-        <a href="BorrowBook.html">Borrow Book</a>
-        <a href="AddBook.html">Add Book</a>
-        <a href ="Profile.html">Profile</a>
-
-        <!--Search bar-->
-        <form action="search" method="GET">
-            <input type="text" name="search" placeholder="Search">
-            <select name="filter">
-                <option value="title">Title</option>
-                <option value="author">Author</option>
-                <option value="category">Category</option>
-            </select>
-            <button type="submit">Search</button>
-        </form>
-        <h1>Edit Profile</h1>
-        <form method="POST">
-            <div>
-                <label for="username">Username:</label>
-                <input type="text" required id="username" name="username" placeholder="Enter your new username">
+    <!--Nav bar-->
+    <div class = "nav_bar">
+        <!--Nav bar actions-->
+        <div class="nav_bar_actions">
+            <img class = "nav_bar_icon" src="pics/web_icon.png">
+            <div class = "left_buttons">
+                <ul id="login_button" class="nav_bar_button"><a href="Login.html">Login</a></ul>
+                <ul id="signup_button" class="nav_bar_button"><a href="Signup.html">Sign Up</a></ul>
             </div>
-        
-            <br>
-
-            <div>
-                <label for="password">Password:</label>
-                <input type="password" required id="password" name="password" placeholder="Enter your new password">
+            <div class="center_buttons">
+                <ul id="index_button" class="nav_bar_button"><a href="index.html">Home</a></ul>
+                <ul id="viewall_button" class="nav_bar_button"><a href="ViewBooks.html">View all</a></ul>
+                <ul id="borrow_book_button" class="nav_bar_button"><a href="BorrowBook.html">Borrow Book</a></ul>
+                <ul id="add_book_button" class="nav_bar_button"><a href="AddBook.html">Add Book</a></ul>
             </div>
-
-            <br>
-
-            <div>
-                <label for="confirm password">Confirm password:</label>
-                <input type="password" required id="confirm password" name="confirm password" placeholder="Re-enter password">
+            <div class ="right_buttons">
+                <ul id="profile_button" class="nav_bar_button"><a href="Profile.html">Profile</a></ul>
+                <ul id="aboutus_button" class="nav_bar_button"><a href="About.html">About Us</a></ul>
             </div>
+        </div>
+    </div> 
 
-            <br>
+        <div class="container">
+            <header>Edit Profile</header>
+            <form action="#">
 
-            <div>
-                <label for="email">Email:</label>
-                <input type="email" required id="email" name="email" placeholder="Enter your new email">
-            </div>
-            
-            <br>
+                <div class="form">
 
-            <div>
-                <input type="reset" value="Reset">
-            </div>
+                    <div class="persoanlDetials">
 
-            <br>
+                        <div class="fields">
+                            <div class="inputField">
+                                <label for="username">Username:</label>
+                                <input type="text" required id="username"name="username" placeholder="Enter your new username">
+                            </div>
 
-            <div>
-                <input type="submit" value="Confirm">
-            </div>
-        </form>
+                            <div class="inputField">
+                                <label for="password">Password:</label>
+                                <input type="password" required id="password" name="password" placeholder="Enter your new password">
+                            </div>
+
+                            <div class="inputField">
+                                <label for="confirm password">Confirm password:</label>
+                                <input type="password" required id="confirm password" name="confirm password" placeholder="Re-enter password">
+                            </div>
+
+                            <div class="inputField">
+                                <label for="email">Email:</label>
+                                <input type="email" required id="email" name="email" placeholder="Enter your new email">
+                            </div>
+
+                            <div>
+                                <input type="submit" value="Confirm">
+                            </div>
+
+                            <div>
+                                <input type="reset" value="Reset">
+                            </div>
+
+                        </div>
+                    </div>
+                </div>
+            </form>
+        </div>
+
     </body>
 </html>
