--- a/ViewBooks.html
+++ b/ViewBooks.html
@@ -5,12 +5,11 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="icon" type="image/png" href="pics/web_icon.png">
-    <script src="javascript/navBar.js"></script>
     <link rel="stylesheet" href="css/core.css">
     <link rel="stylesheet" href="css/nav_bar.css">
     <link rel="stylesheet" href="css/search_bar.css">
     <link rel = "stylesheet" href="css/introtext.css">
-    <link rel = "stylesheet" href="css/book_block.css">
+    <link rel = "stylesheet" href="css/all_books.css">
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Shadows+Into+Light&display=swap" rel="stylesheet">
@@ -20,18 +19,6 @@
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Indie+Flower&family=Permanent+Marker&family=Shadows+Into+Light&display=swap" rel="stylesheet">
-    <style>
-        body {
-            font-family: Arial, sans-serif;
-            background-color: #f5f5f5; 
-            color: #333; 
-            margin: 0;
-            padding: 0;
-        }
-
-        
-
-    </style>
     <title>EgyBooks | Add book</title>
 </head>
 
@@ -42,18 +29,18 @@
         <div class="nav_bar_actions">
             <img class = "nav_bar_icon" src="pics/web_icon.png">
             <div class = "left_buttons">
-                <ul id="login_button" class="nav_bar_button"><a href="Login.html">Login</a></ul>
-                <ul id="signup_button" class="nav_bar_button"><a href="Signup.html">Sign Up</a></ul>
+                <ul class="nav_bar_button"><a href="Login.html">Login</a></ul>
+                <ul class="nav_bar_button"><a href="Signup.html">Sign Up</a></ul>
             </div>
             <div class="center_buttons">
-                <ul id="index_button" class="nav_bar_button"><a href="index.html">Home</a></ul>
-                <ul id="viewall_button" class="nav_bar_button"><a href="ViewBooks.html">View all</a></ul>
-                <ul id="borrow_book_button" class="nav_bar_button"><a href="BorrowBook.html">Borrow Book</a></ul>
-                <ul id="add_book_button" class="nav_bar_button"><a href="AddBook.html">Add Book</a></ul>
+                <ul class="nav_bar_button"><a href="index.html">Home</a></ul>
+                <ul class="nav_bar_button"><a href="ViewBooks.html">View all</a></ul>
+                <ul class="nav_bar_button"><a href="BorrowBook.html">Borrow Book</a></ul>
+                <ul class="nav_bar_button"><a href="AddBook.html">Add Book</a></ul>
             </div>
             <div class ="right_buttons">
-                <ul id="profile_button" class="nav_bar_button"><a href="Profile.html">Profile</a></ul>
-                <ul id="aboutus_button" class="nav_bar_button"><a href="About.html">About Us</a></ul>
+                <ul class="nav_bar_button"><a href="Profile.html">Profile</a></ul>
+                <ul class="nav_bar_button"><a href="About.html">About Us</a></ul>
             </div>
         </div>
     
@@ -75,17 +62,29 @@
         </div>
     </div>
 
-    <div class="book_block">
-        <a href="BookPage.html" class="book_link">
-            <img src="/home/moustafa/EgyBooks/WebProject/WebProject/pics/clean code image.jpg" alt="Book Cover" class="book_image">
-            <div class="book_details">
-                <h2 class="book_title">Book Title</h2>
-                <p class="book_author">Author Name</p>
-                <p class="book_price">$19.99</p>
-            </div>
-        </a>
-    </div>
+    <div class="all_books">
+        <div class="book_block">
+            <a href="BookPage.html" class="book_link">
+                <img src="pics/clean code image.jpg" alt="Book Cover" class="book_image">
+                <div class="book_details">
+                    <h2 class="book_title">Book Title</h2>
+                    <p class="book_author">Author Name</p>
+                    <p class="book_price">$19.99</p>
+                </div>
+            </a>
+        </div>
 
+        <div class="book_block">
+            <a href="BookPage.html" class="book_link">
+                <img src="pics/clean code image.jpg" alt="Book Cover" class="book_image">
+                <div class="book_details">
+                    <h2 class="book_title">Book Title</h2>
+                    <p class="book_author">Author Name</p>
+                    <p class="book_price">$19.99</p>
+                </div>
+            </a>
+        </div>
+    </div>
 </body>
 
 </html>
