fixed some javascript

--- a/ViewBooks.html
+++ b/ViewBooks.html
@@ -26,22 +26,22 @@
 <body>
     <!--Nav bar-->
     <div class = "nav_bar">
-        <!--Nav bar actions-->
-        <div class="nav_bar_actions">
+         <!--Nav bar actions-->
+         <div class="nav_bar_actions">
             <img class = "nav_bar_icon" src="pics/web_icon.png">
             <div class = "left_buttons">
-                <ul class="nav_bar_button"><a href="Login.html">Login</a></ul>
-                <ul class="nav_bar_button"><a href="Signup.html">Sign Up</a></ul>
+                <ul id="login_button" class="nav_bar_button"><a href="Login.html">Login</a></ul>
+                <ul id="signup_button" class="nav_bar_button"><a href="Signup.html">Sign Up</a></ul>
             </div>
             <div class="center_buttons">
-                <ul class="nav_bar_button"><a href="index.html">Home</a></ul>
-                <ul class="nav_bar_button"><a href="ViewBooks.html">View all</a></ul>
-                <ul class="nav_bar_button"><a href="BorrowBook.html">Borrow Book</a></ul>
-                <ul class="nav_bar_button"><a href="AddBook.html">Add Book</a></ul>
+                <ul id="index_button" class="nav_bar_button"><a href="index.html">Home</a></ul>
+                <ul id="viewall_button" class="nav_bar_button"><a href="ViewBooks.html">View all</a></ul>
+                <ul id="borrow_book_button" class="nav_bar_button"><a href="BorrowBook.html">Borrow Book</a></ul>
+                <ul id="add_book_button" class="nav_bar_button"><a href="AddBook.html">Add Book</a></ul>
             </div>
             <div class ="right_buttons">
-                <ul class="nav_bar_button"><a href="Profile.html">Profile</a></ul>
-                <ul class="nav_bar_button"><a href="About.html">About Us</a></ul>
+                <ul id="profile_button" class="nav_bar_button"><a href="Profile.html">Profile</a></ul>
+                <ul id="aboutus_button" class="nav_bar_button"><a href="About.html">About Us</a></ul>
             </div>
         </div>
     
