Update  profile.html

--- a/Profile.html
+++ b/Profile.html
@@ -4,6 +4,7 @@
       <meta charset="UTF-8">
       <meta name="viewport" content="width=device-width, initial-scale=1.0">
       <script src="javascript/navBar.js"></script>
+      <script src="javascript/profile.js"></script>
       <link rel="icon" type="image/png" href="pics/web_icon.png">
       <link rel="stylesheet" href="css/core.css">
       <link rel="stylesheet" href="css/nav_bar.css">
@@ -53,25 +54,25 @@
               <h2 id="profile-h2">Account info</h2>
               
               <div class="info-item">
-                <span class="info-label">Username</span> <span class="info-data">Book lover</span>
+                <span class="info-label">Username</span> <span class="info-data" id="profile-username"></span>
               </div>
 
               <br>
 
               <div class="info-item">
-                <span class="info-label">Email</span> <span class="info-data">admin@example.com</span>
+                <span class="info-label">Email</span> <span class="info-data" id="profile-email"></span>
               </div>
 
               <br>
 
               <div class="info-item">
-                <span class="info-label">Password</span> <span class="info-data">Admin1234</span>
+                <span class="info-label">Password</span> <span class="info-data" id="profile-password"></span>
               </div>
 
               <br>
 
               <div class="info-item">
-                <span class="info-label">Account Type</span> <span class="info-data">Admin</span>
+                <span class="info-label">Account Type</span> <span class="info-data" id="profile-account-type"></span>
               </div>
 
           </div>
