--- a/index.html
+++ b/index.html
@@ -78,7 +78,7 @@
     </div>
     <div class="para_text">
         <p>
-            EgyBooks is an nline library website that helps people search for books
+            EgyBooks is an online library website that helps people search for books
             and borrow them
          </p>
     </div>
