--- a/ViewBooks.html
+++ b/ViewBooks.html
@@ -5,6 +5,7 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <script src="javascript/navBar.js"></script>
+    <script src="javascript/viewbooks.js"></script>
     <link rel="icon" type="image/png" href="pics/web_icon.png">
     <link rel="stylesheet" href="css/core.css">
     <link rel="stylesheet" href="css/nav_bar.css">
@@ -64,27 +65,7 @@
     </div>
 
     <div class="all_books">
-        <div class="book_block">
-            <a href="BookPage.html" class="book_link">
-                <img src="pics/clean code image.jpg" alt="Book Cover" class="book_image">
-                <div class="book_details">
-                    <h2 class="book_title">Book Title</h2>
-                    <p class="book_author">Author Name</p>
-                    <p class="book_price">$19.99</p>
-                </div>
-            </a>
-        </div>
-
-        <div class="book_block">
-            <a href="BookPage.html" class="book_link">
-                <img src="pics/clean code image.jpg" alt="Book Cover" class="book_image">
-                <div class="book_details">
-                    <h2 class="book_title">Book Title</h2>
-                    <p class="book_author">Author Name</p>
-                    <p class="book_price">$19.99</p>
-                </div>
-            </a>
-        </div>
+        
     </div>
 </body>
 
